Bug 1523343 - Should not round translation for SVG frame r=longsonr

When computing transform matrix, translation in SVG should not be rounded.
Checking !IsSVGTransformed() isn't the correct way, since an SVG frame may
have CSS transform applied.

Differential Revision: https://phabricator.services.mozilla.com/D26271